layout orders customer list
