# server/repositories/payment/dao/paymentsStatus.dao.ts
@@ -1,0 +1,7 @@
+import { RowDataPacket } from "mysql2";
+
+export interface RowPaymentsStatus extends RowDataPacket {
+  id: number;
+  label: string;
+  color: string;
+}
