# server/swagger.yaml
@@ -286,7 +286,7 @@ paths:
           description: Not found - The customer doesn't exist.
       security:
         - api_key: []
-  /customer/addresses:
+  /customer/address:
     get:
       tags:
         - customer
@@ -2320,6 +2320,22 @@ paths:
       security:
         - api_key: []
   /payment/status:
+    get:
+      tags:
+        - payment
+      summary: Retrieve all status payments.
+      description: Retrieve all status payments.
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentStatusGET'
+        '401':
+          description: Unauthorized - Customer is not authenticated
+      security:
+        - api_key: []
     patch:
       tags:
         - payment
@@ -3799,8 +3815,8 @@ components:
       type: object
       properties:
         first_holder_id:
-          type: string
-          example: 098754838475987
+          type: integer
+          example: 987
         code:
           type: string
           example: 09hdf987BSK987
@@ -3817,19 +3833,19 @@ components:
           type: string
           example: 08/08/2025
         buy_order_id:
-          type: string
-          example: 98702-495
+          type: integer
+          example: 98702
         usage_history:           
           type: array
           items:
             type: object
             properties:
               gift_card_id:
-                type: string
-                example: 0098qere0987
+                type: integer
+                example: 443
               used_by_customer_id:
-                type: string
-                example: 7jf49875j
+                type: integer
+                example: 7
               amount_used:
                 type: integer
                 example: 20
@@ -4387,6 +4403,20 @@ components:
         status:
           type: string
           example: "paid"
+    PaymentStatusGET:
+      type: array
+      items:
+        type: object
+        properties:
+          id: 
+            type: integer
+            example: 1
+          label:
+            type: string
+            example: payée
+          color:
+            type: string
+            example: "#FFFFF"
     MarketingCompaignGET:
       type: object
       properties:
